--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-    <div>
+    <div  class="container">
         <h2 class="text-center">Search your Phones </h2>
         <div class="input-group mb-3 w-50 mx-auto">
             <input type="text" class="form-control" id="input-search" placeholder="Search Phones" aria-label="Recipient's username" aria-describedby="button-addon2">
             <button class="btn btn-outline-secondary" type="button" id="button-search" onclick="searchPhones()">Search</button>
           </div>
+        <div id="phone-detail" class="row row-cols-1 row-cols-md-3 g-4 align-items-center">
+
+        </div>
         <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4">
 
         </div>
