--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
             <input type="text" class="form-control" id="input-search" placeholder="Search Phones" aria-label="Recipient's username" aria-describedby="button-addon2">
             <button class="btn btn-outline-secondary" type="button" id="button-search" onclick="searchPhones()">Search</button>
           </div>
-        <div id="phone-detail" class="row row-cols-1 row-cols-md-3 g-4 align-items-center">
+        <div id="phone-detail" class="mx-auto p-3" style="width: 500px;" class="row row-cols-1 row-cols-md-3 g-4 align-items-center">
 
         </div>
         <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4">
 
+        </div>
+        <div class="mx-auto p-3" style="width: 200px;">
+            <button id="btn-show" class="border-0 p-3 bg-warning"  style="display: none;">Show All</button>
         </div>
 
     </div>
