--- a/index.html
+++ b/index.html
@@ -5,18 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mobile Shop</title>
+    <!-- bootstrap link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
     <div  class="container">
+        <!-- Search Box -->
         <h2 class="text-center">Search your Phones </h2>
         <div class="input-group mb-3 w-50 mx-auto">
             <input type="text" class="form-control" id="input-search" placeholder="Search Phones" aria-label="Recipient's username" aria-describedby="button-addon2">
             <button class="btn btn-outline-secondary" type="button" id="button-search" onclick="searchPhones()">Search</button>
           </div>
+        <!-- Details -->
         <div id="phone-detail" class="mx-auto p-3" style="width: 500px;" class="row row-cols-1 row-cols-md-3 g-4 align-items-center">
 
         </div>
+        <!-- Search Result -->
         <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4">
 
         </div>
@@ -25,7 +29,9 @@
         </div>
 
     </div>
+    <!-- bootstrap Script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <!-- External js -->
     <script src="js/phone.js"></script>
 </body>
 </html>
